--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,9 @@ body, html{
   padding: 0px 20px;
 }
 li p{
-  font-size: 30px;
+  font-size: 30px!important;
   z-index: 20;
+  margin-top: 5px!important;
 }
 .lSPager.lSGallery{
 margin: 0 auto!important;
@@ -39,6 +40,16 @@ margin: 0 auto!important;
   top: 55px;
   left: 0px;
   z-index: 1;
+}
+.ribbon{
+  position: absolute;
+  width: 100px;
+  top: 40px;
+  right: 40px;
+  z-index: 999;
+}
+.active{
+position: relative;
 }
 .thismonthplant{
   z-index: 100;
